--- a/css/style.css
+++ b/css/style.css
@@ -156,11 +156,11 @@ header {
   font-size: 1.1rem;
 }
 
-.lista {
+.cobertura {
   list-style: none;
 }
-.lista li {
-  font-size: 1.2rem;
+.cobertura li {
+  font-size: 1rem;
   font-family: "Source Sans Pro", sans-serif;
   margin-top: 5%;
   color: black;
@@ -386,12 +386,22 @@ h1 {
   .staffmedico-p {
     font-size: 0.8rem;
   }
-  /* .staff-h2 {
-       font-size: 1rem;
-   }
-   .staff-titulo {
-       font-size: 1rem;
-   }*/
+}
+@media (min-width: 768px) and (max-width: 1400px) {
+  .cobertura {
+    font-size: 1.2rem;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr;
+    row-gap: 20px;
+    grid-template-areas: "columna-1 columna-2";
+  }
+  .cobertura-1 {
+    grid-area: "columna-1";
+  }
+  .cobertura-2 {
+    grid-area: "columna-2";
+  }
 }
 /*-------------------------cobertura----------------------------------*/
 @media (max-width: 768px) {
