--- a/scss/componentes/_media.scss
+++ b/scss/componentes/_media.scss
@@ -11,6 +11,7 @@
     .navbar-brand {
         width: 20%;
     }
+
     .logo {
         width: 60%;
         height: 60%;
@@ -23,9 +24,10 @@
 
 @media (max-width: 768px) {
     h1 {
-    font-size: 1.5rem;
+        font-size: 1.5rem;
+    }
 }
-}
+
 /*----------------------------footer-------------------------------*/
 
 @media (max-width:768px) {
@@ -72,37 +74,55 @@
         margin-top: 5%;
     }
 }
+
 /*------------------------------staff medico---------------------------------------*/
 
 @media (max-width: 480px) {
     .staffmedico-name .staff-h2 .staff-titulo {
         font-size: 1rem;
     }
+
     .staffmedico-p {
         font-size: 0.8rem;
     }
-   /* .staff-h2 {
-        font-size: 1rem;
-    }
-    .staff-titulo {
-        font-size: 1rem;
-    }*/
 }
+
+@media (min-width: 768px) and (max-width: 1400px) {
+    .cobertura {
+        font-size: 1.2rem;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 1fr;
+        row-gap: 20px;
+        grid-template-areas:
+            "columna-1 columna-2"
+    }
+
+    .cobertura-1 {
+        grid-area: "columna-1";
+    }
+
+    .cobertura-2 {
+        grid-area: "columna-2";
+    }
+}
+
 /*-------------------------cobertura----------------------------------*/
 @media (max-width: 768px) {
     .lista {
         font-size: 1.2rem;
     }
 }
+
 /*---------------------------contacto-----------------------------------*/
-@media (max-width: 768px){
+@media (max-width: 768px) {
     .form-p {
         font-size: 1rem;
         text-align: start;
     }
 }
 
-@media (max-width: 768px){
+@media (max-width: 768px) {
     .boton {
         position: fixed;
         width: 50px;
@@ -111,11 +131,12 @@
         right: 15px;
         font-size: 23px;
     }
-       
+
+}
+
+@media (max-width:320px) {
+    .mapa {
+        width: 100%;
     }
-    @media (max-width:320px) {
-        .mapa {
-            width: 100%;
-        }
-        
-    }
+
+}
