--- a/scss/paginas/_cobertura.scss
+++ b/scss/paginas/_cobertura.scss
@@ -4,11 +4,11 @@
     align-items: center;
 }
 
-.lista {
+.cobertura {
     list-style: none;
 
     li {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-family: $fuente-primaria;
     margin-top: 5%;
     color: $color-primario; 
