--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,18 @@ header {
   padding: 20px;
 }
 
+.exito {
+  background-color: rgba(220, 220, 220, 0.5);
+}
+
+.exito__p {
+  font-family: "Nuosu SIL", serif;
+  font-size: 1.3rem;
+  color: black;
+  font-weight: 600;
+  margin-top: 2%;
+}
+
 h1 {
   font-size: 2.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
