--- a/scss/paginas/_exito.scss
+++ b/scss/paginas/_exito.scss
@@ -1,8 +1,10 @@
 .exito {
-    background-color: black;
+    background-color: 	rgba(220, 220, 220, 0.5);
 }
-.exito__h1 {
-    font-family: $fuente-primaria;
-    font-size: 1.5rem;
-    color: white;
+.exito__p {
+    font-family: $fuente-terciaria;
+    font-size: 1.3rem;
+    color: $color-primario;
+    font-weight: 600;
+    margin-top: 2%;
 }
